added features: search suggestions, fav gifs, capture video, dark mode. Fixed: mobile menu

--- a/styles/sass/layout/body/_section-1.scss
+++ b/styles/sass/layout/body/_section-1.scss
@@ -2,6 +2,10 @@
 	width: 100%;
 	@include flexColumnCenter;
 
+	&.hide {
+		display: none;
+	}
+
 	&__title {
 		@include textStyle(
 			$font-montserrat,
