--- a/styles/sass/utility/_variables.scss
+++ b/styles/sass/utility/_variables.scss
@@ -3,3 +3,10 @@ $primary-color: #000;
 $seconday-color: #572ee5;
 $decorated-title-span: #50e3c2;
 $background-color: #f3f5f8;
+
+// color darkmode
+
+$primary-color-dark: #ffffff;
+$decorated-title-span-dark: #50e3c2;
+$background-color-dark: #37383c;
+$trending-gifos-background-dark: #000;
