--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -16,5 +16,6 @@
 @import '../sass/layout/body/section-4';
 @import '../sass/layout/body/section-5';
 @import '../sass/layout/body/section-6';
+@import '../sass/layout/body/popup';
 @import '../sass/layout/footer';
 @import '../sass/layout/body/darkMode';
