--- a/styles/sass/utility/_helper.scss
+++ b/styles/sass/utility/_helper.scss
@@ -5,3 +5,85 @@
 .create-gifos-button.active {
 	transform: rotate(45deg);
 }
+
+// TODO: refactor figure element
+
+figure {
+	position: relative;
+
+	&::after {
+		content: '\A';
+		position: absolute;
+		width: 100%;
+		height: 99%;
+		top: 0;
+		left: 0;
+		background: #572ee5;
+		opacity: 0;
+		transition: all 0.5s;
+		-webkit-transition: all 0.5s;
+		z-index: 1;
+	}
+
+	&:hover::after {
+		opacity: 0.7;
+	}
+
+	&:not(:last-child) {
+		margin-right: 22px;
+	}
+
+	.trending-gif-items {
+		width: 243px;
+		height: 187px;
+		object-fit: cover;
+	}
+
+	.trending-gifs-buttons {
+		position: absolute;
+		top: 0;
+		right: 0;
+		padding: 10px;
+		z-index: 2;
+		display: none;
+
+		button {
+			padding: 0;
+			border: none;
+			outline: none;
+			color: $primary-color;
+			width: 30px;
+			height: 30px;
+			background: transparent;
+			background-size: cover;
+		}
+
+		.icon-fav {
+			background-image: url('../../../../assets/icon-fav.svg');
+
+			&:hover {
+				background-image: url('../../../../assets/icon-fav-hover.svg');
+			}
+		}
+
+		.icon-download {
+			background-image: url('../../../../assets/icon-download.svg');
+
+			&:hover {
+				background-image: url('../../../../assets/icon-download-hover.svg');
+			}
+		}
+
+		.icon-max {
+			background-image: url('../../../../assets/icon-max-normal.svg');
+
+			&:hover {
+				background-image: url('../../../../assets/icon-max-hover.svg');
+			}
+		}
+
+		@include mediaQuery-desktop(768px) {
+			display: block;
+		}
+	}
+}
